--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="C:\Users\Maciek\Desktop\nowy\cwiczenie\css\style.css">
 
 </head>
 <body>
-    
+    <table>
+      <ul><li>
     <form>
         <div class="form-group">
           <label for="exampleInputEmail1">Email address</label>
@@ -30,6 +32,7 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+    </li></ul></table>
 
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js">
 </body>
